# vscode-mcp-rag

./: .gitignore  PR_DESCRIPTION.md  QUICKSTART.md  README.md  mcp-config.json  package.json  pyproject.toml  tsconfig.json
scripts/: dev.bat  dev.sh  start.bat  start.sh  test-mcp.js
server/: mcp_server.py
src/: index.ts  server.js
src/__tests__/: server.test.ts
