[tool.poetry]
name = "vscode-mcp-rag"
version = "0.1.0"
description = "Minimal Python MCP HTTP server for VS Code Copilot with dummy RAG"
authors = ["xisi4 <you@example.com>"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"

[tool.poetry.scripts]
mcp-http-server = "server.mcp_server:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


